Use zc.buildout for the example application.

--- a/example/sample/templates/hello.html
+++ b/example/sample/templates/hello.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello {{ first_name }}</h1>
-    <p><a href="{% url example.website.views.home %}">Go back</a></p>
+    <p><a href="{% url sample.website.views.home %}">Go back</a></p>
 </body>
 </html>
