--- a/example/sample/templates/home.html
+++ b/example/sample/templates/home.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Welcome!</h1>
-    <form action="{% url example.website.views.say_hello %}" method="post">
+    <form action="{% url sample.website.views.say_hello %}" method="post">
         <p>What is your name?</p>
         <p><input type="text" name="first_name"></p>
         <p><input type="submit" value="Continue"></p>
